--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,26 @@
-.sass-cache
+
+
+design
+arch
+
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
+*.swp
+*.vi
+*~
+*.sass-cache
+
+.DS_Store
+._*
+Thumbs.db
+*.sublime-project
+*.sublime-workspace
 .idea
 .project
 .pydevproject
 .externalToolBuilders
 .settings
-config.rb
-
-design
-arch
